--- a/src/css/templates/home-page.css
+++ b/src/css/templates/home-page.css
@@ -2,15 +2,16 @@
   background-color: whitesmoke;
   background: url("../../assets/images/home-image3.jpg") center;
   background-size: cover;
-  height: 2000px;
-  text-align: center; 
   display: flex;
   flex-direction: column;
+  height: 750px;
+  text-align: center; 
+  
 }
 
 /* Desktop */
 @media only screen and (min-width: 750px) {
-  home-page {
+  .home-page {
       height: 1080px; 
   }
 }
